---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: type mismatch
  ┌─ [snippet]:3:19
  │
3 │   x: u16[3] = [1, address(0), "hi"]
  │                   ^^^^^^^^^^ this has type `address`; expected type `u16`

error: type mismatch
  ┌─ [snippet]:3:31
  │
3 │   x: u16[3] = [1, address(0), "hi"]
  │                               ^^^^ this has type `string<2>`; expected type `u16`


